--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      image: cimg/base:stable
+      - image: cimg/base:stable
     paralleism: 50
     steps:
       - checkout
