--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:2022.11
+      - image: cimg/openjdk:11.0
     parallelism: 50
     steps:
       - run:
